1998-11-10  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* eval.c (scm_copy_tree): Copy source properties if existent.

	* debug.c (scm_start_stack): Copy source when evaluating.  (If we
	don't, we may end up passing memoized source to a transformer.)

1998-11-10  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* stack.c (get_applybody): Help function which lookups the first
	body form of the apply closure.
	(read_frames): Prevent the source of the first form of the apply
	closure from being recorded.  This would only be confusing.

	* debug.h (SCM_SET_MACROEXP, SCM_CLEAR_MACROEXP, SCM_MACROEXPP):
	Replaces SCM_MACROFRAME, SCM_MACROFRAMEP.
	
	* eval.c (SCM_CEVAL): Use SCM_SET/CLEAR_MACROEXP.

	* stacks.c (read_frame): Bugfix: Removed lingering `else'
	statement.
	(read_frames): Use SCM_MACROEXPP.

1998-11-10  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* stacks.c (read_frames): Skip gsubr frames in backtraces.  (They
	don't contain interesting information since all arguments are
	present in the frame which applies the compiled closure anyway.);
	Skip the transformer application frames.

	* print.c (scm_iprin1): Print gsubrs as primitives.

1998-11-09  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* debug.h (SCM_MACROFRAME, SCM_MACROFRAMEP): New frame type.

	* eval.c (SCM_CEVAL): Mark macro frames at `handle_a_macro' so
	that we can identify these in a backtrace.  (This change doesn't
	introduce any significant speed penalty.)

	* eval.c: Added note about `serial-map' using scm_map.

	* read.c, read.h (scm_read_options, scm_read_opts): Removed
	readline options.  They should reside in their own options array.
	
	* readline.c, readline.h (scm_readline_options,
	scm_readline_opts): Moved readline options here.

1998-11-07  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* readline.c (scm_read_history, scm_write_history): Bugfix: Use
	SCM_ROCHARS instead of SCM_CHARS.

	* ports.c (scm_unread_string): Bugfixes: Check for SCM_STRINGP,